--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-hans">
 <head>
 	<meta charset="utf-8">
-	meta:vp
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<title>Document</title>
 </head>
 <body>
