--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<title>Document</title>
 	test
+	test2
 </head>
 <body>
 	<script type="text/javascript" src="js/jq.js"></script>
